# mkdg

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  requirements.txt  weblog.py
demo/: 2022-02-22-sample-page.html  2022-03-14-markdown.md  about.md  index.html  p1.html  p2.html  p3.html
demo/posts/: p1.html
demo/templates/: base.html  index.html  page-list.html  page.html  post.html
old-python-generator/: README.md
old-python-generator/demo/: 2022-02-22-post.html  about.html  index.html  p1.html
old-python-generator/demo/templates/: base.html  page-list.html  post.html
src/: main.rs  parser.rs
test/: base.html  index.html  knowledge_graph.html  p2.md  p3.md  post.html
test/css/: default.css
test/posts/: about.html  p1.md  p2.html  p2.md  p3.md
