[package]
name = "simple-digital-garden-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { version = "0.32.1", features = ["source"] }
clap = { version = "4.2.4", features = ["derive"] }
chrono = { version = "0.4.24" }
regex = { version = "1.8.1" }